# Jamfrs

./: Cargo.toml  README.md
jamfrs_cli/: Cargo.toml
jamfrs_cli/src/: arg_mappings.rs  args.rs  main.rs
jamfrs_lib/: Cargo.toml
jamfrs_lib/src/: lib.rs
jamfrs_lib/src/api_service/: api_endpoints.rs  session.rs
src/: api_endpoints.rs  api_service.rs  api_token.rs  args.rs  main.rs  session.rs
