[package]
name = "jamfrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
jamfrs_lib = { path = "../jamfrs_lib"}
reqwest = { version = "0.11.12", features = ["json"] }
serde_json = "1.0.87"
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros"] }
xmltree = "0.10.3"