[package]
name = "jamfrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive", "env"] }
jamfrs_lib = { path = "../jamfrs_lib"}
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.87"
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros"] }
xmltree = "0.10.3"