[package]
name = "jamfrs_lib"
version = "0.0.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
regex = "1.7.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros"] }
